2007-06-01  Christian Faulhammer  <opfer@gentoo.org>

	* added elisp-emacs-major-version() and elisp-make-autoload-file()
	to highlighted keywords in elisp group

	* renamed command groups 0 to sandbox and 1 to eclass to reflect
	their offspring in the name

2007-05-26  Ulrich Mueller  <ulm@kph.uni-mainz.de>

	* Makefile: New file.

2007-05-23  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-tabify): Tabify whitespace only at
	beginning of lines.

2007-05-23  Christian Faulhammer  <opfer@gentoo.org>

	* group 3 now is named flag-o-matic, group 4 renamed to elisp to
	reflect source of them

	* changed version to 1.6

2007-03-22  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el: version 1.5

2007-03-19  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (sh-must-be-shell-mode): Make TAB key work in
	Emacs 21.

2007-03-18  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-commands-0): Sort keywords in
	alphabetical order. Duplicate keyword "into" removed.

2007-03-16  Christian Faulhammer  <opfer@gentoo.org>

	* should really add elisp-* functions

2007-03-15  Christian Faulhammer  <opfer@gentoo.org>

	* functions from elisp-common.eclass, flag-o-matic.eclass,
	some from eutils.eclass added to highlighted keywords

	* keywords grouped by type (not yet finished)

	* version 1.4